--- a/frontend/happybirthday.html
+++ b/frontend/happybirthday.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,3 +47,4 @@
             <button id="makeit" type="button" onclick="changetext()" disabled>Make it come true</button>
         </div>
     </body>
+</html>
